// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtomDatetime renders with all props 1`] = `
<atom-datetime label="Select a date">
  <!---->
  <ion-datetime class="atom-datetime" color="secondary" hourcycle="h23" id="datetime" locale="pt-BR" mode="md" presentation="date" size="fixed"></ion-datetime>
</atom-datetime>
`;

exports[`AtomDatetime should renders with a button when useButton is true 1`] = `
<atom-datetime usebutton="true">
  <!---->
  <ion-datetime class="atom-datetime" color="secondary" hourcycle="h23" id="datetime" locale="pt-BR" mode="md" presentation="date" size="fixed"></ion-datetime>
</atom-datetime>
`;
